--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			</div>
 			</div>
 
-			<img class="profile-pic" src="E:/full_stack_projects/Google_project/images/profile.png" alt="Profile Pic">
+			<img class="profile-pic" src="profile.png" alt="Profile Pic">
 		</nav>
 	</header>
 	<main>
